Fix 7-day overview, update data, rerun notebook

--- a/covid19stats.ipynb
+++ b/covid19stats.ipynb
@@ -160,7 +160,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1161993e405441d49aca9b3ff23edb28",
+       "model_id": "b5612f39418c41409c374edaa15a8609",
        "version_major": 2,
        "version_minor": 0
       },
@@ -206,7 +206,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d19597fccc66461c95fa289c0f63d089",
+       "model_id": "8adece74ff514c9db7f994d694aae87a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -221,25 +221,17 @@
    "source": [
     "start_at = pd.to_datetime(datetime.date.today() - datetime.timedelta(days=7))\n",
     "lkr = rki_lkr[[\"county\", \"EWZ\", \"KFL\"]]\n",
-    "sum_lkr = rki_cases[rki_cases.Meldedatum > start_at].groupby(\"Landkreis\").sum()[[\"cases\", \"deaths\", \"recovered\"]]\n",
+    "sum_lkr = rki_cases[rki_cases.Meldedatum >= start_at].groupby(\"Landkreis\").sum()[[\"cases\", \"deaths\", \"recovered\"]]\n",
     "counties = pd.merge(lkr, sum_lkr, right_on=\"Landkreis\", left_on=\"county\")\n",
     "counties[\"cases/100000 inhabitants\"] = (counties[\"cases\"]/counties[\"EWZ\"])*100000\n",
     "counties[\"cases/km²\"] = counties[\"cases\"]/counties[\"KFL\"]\n",
     "counties[\"cases/inhabitants\"] = counties[\"cases\"]/counties[\"EWZ\"]\n",
     "counties[\"deaths/km²\"] = counties[\"deaths\"]/counties[\"KFL\"]\n",
     "counties[\"deaths/inhabitants\"] = counties[\"deaths\"]/counties[\"EWZ\"]\n",
+    "counties[\"inhabitants\"] = counties[\"EWZ\"]\n",
     "counties.drop([\"EWZ\", \"KFL\"], axis=\"columns\", inplace=True)\n",
-    "qgrid.show_grid(counties, show_toolbar=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
-   "source": [
+    "qgrid.show_grid(counties, show_toolbar=True)\n",
+    "\n",
     "## Cases, recovered, deaths (all of Germany)"
    ]
   },
@@ -292,49 +284,49 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2020-09-17</th>\n",
-       "      <td>2275</td>\n",
-       "      <td>1</td>\n",
-       "      <td>74</td>\n",
-       "      <td>269354</td>\n",
-       "      <td>9392</td>\n",
-       "      <td>243624</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-09-18</th>\n",
-       "      <td>2022</td>\n",
+       "      <th>2020-10-10</th>\n",
+       "      <td>3565</td>\n",
        "      <td>3</td>\n",
-       "      <td>47</td>\n",
-       "      <td>271376</td>\n",
-       "      <td>9395</td>\n",
-       "      <td>243671</td>\n",
+       "      <td>90</td>\n",
+       "      <td>326018</td>\n",
+       "      <td>9697</td>\n",
+       "      <td>284434</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2020-09-19</th>\n",
-       "      <td>1312</td>\n",
-       "      <td>0</td>\n",
-       "      <td>24</td>\n",
-       "      <td>272688</td>\n",
-       "      <td>9395</td>\n",
-       "      <td>243695</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-09-20</th>\n",
-       "      <td>593</td>\n",
+       "      <th>2020-10-11</th>\n",
+       "      <td>2245</td>\n",
        "      <td>1</td>\n",
-       "      <td>13</td>\n",
-       "      <td>273281</td>\n",
-       "      <td>9396</td>\n",
-       "      <td>243708</td>\n",
+       "      <td>23</td>\n",
+       "      <td>328263</td>\n",
+       "      <td>9698</td>\n",
+       "      <td>284457</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2020-09-21</th>\n",
-       "      <td>877</td>\n",
-       "      <td>0</td>\n",
-       "      <td>19</td>\n",
-       "      <td>274158</td>\n",
-       "      <td>9396</td>\n",
-       "      <td>243727</td>\n",
+       "      <th>2020-10-12</th>\n",
+       "      <td>4013</td>\n",
+       "      <td>7</td>\n",
+       "      <td>58</td>\n",
+       "      <td>332276</td>\n",
+       "      <td>9705</td>\n",
+       "      <td>284515</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-10-13</th>\n",
+       "      <td>4935</td>\n",
+       "      <td>3</td>\n",
+       "      <td>43</td>\n",
+       "      <td>337211</td>\n",
+       "      <td>9708</td>\n",
+       "      <td>284558</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-10-14</th>\n",
+       "      <td>4012</td>\n",
+       "      <td>2</td>\n",
+       "      <td>14</td>\n",
+       "      <td>341223</td>\n",
+       "      <td>9710</td>\n",
+       "      <td>284572</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -343,11 +335,11 @@
       "text/plain": [
        "            cases  deaths  recovered  cum_cases  cum_deaths  cum_recovered\n",
        "Meldedatum                                                                \n",
-       "2020-09-17   2275       1         74     269354        9392         243624\n",
-       "2020-09-18   2022       3         47     271376        9395         243671\n",
-       "2020-09-19   1312       0         24     272688        9395         243695\n",
-       "2020-09-20    593       1         13     273281        9396         243708\n",
-       "2020-09-21    877       0         19     274158        9396         243727"
+       "2020-10-10   3565       3         90     326018        9697         284434\n",
+       "2020-10-11   2245       1         23     328263        9698         284457\n",
+       "2020-10-12   4013       7         58     332276        9705         284515\n",
+       "2020-10-13   4935       3         43     337211        9708         284558\n",
+       "2020-10-14   4012       2         14     341223        9710         284572"
       ]
      },
      "execution_count": 7,
@@ -384,7 +376,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6f89a3b6827c472c80da4c72ad6e69c8",
+       "model_id": "0280f3087aea49ed86c3b6ddba486e2b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -428,7 +420,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "91386f4df850446fa532528cdbdbb278",
+       "model_id": "b223fa7abc6247f7914ff16a05a0ddd0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -499,7 +491,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "81570e46ab394b84b1a038d3194655b2",
+       "model_id": "738dbb50bf0b443c871ad513f9ae5251",
        "version_major": 2,
        "version_minor": 0
       },
@@ -539,7 +531,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b9e96ab32ac04245b99a2d5a744a8a19",
+       "model_id": "316d437b496f4e91b8159e91f82a46bb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -627,58 +619,58 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>A00-A04</th>\n",
-       "      <td>4878</td>\n",
+       "      <td>6272</td>\n",
        "      <td>1</td>\n",
-       "      <td>4337</td>\n",
-       "      <td>540</td>\n",
-       "      <td>0.020500</td>\n",
+       "      <td>5294</td>\n",
+       "      <td>977</td>\n",
+       "      <td>0.015944</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>A05-A14</th>\n",
-       "      <td>12838</td>\n",
+       "      <td>17422</td>\n",
        "      <td>0</td>\n",
-       "      <td>11223</td>\n",
-       "      <td>1615</td>\n",
+       "      <td>14249</td>\n",
+       "      <td>3173</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>A15-A34</th>\n",
-       "      <td>84566</td>\n",
-       "      <td>19</td>\n",
-       "      <td>75564</td>\n",
-       "      <td>8983</td>\n",
-       "      <td>0.022468</td>\n",
+       "      <td>110614</td>\n",
+       "      <td>21</td>\n",
+       "      <td>92931</td>\n",
+       "      <td>17662</td>\n",
+       "      <td>0.018985</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>A35-A59</th>\n",
-       "      <td>107640</td>\n",
-       "      <td>448</td>\n",
-       "      <td>100011</td>\n",
-       "      <td>7181</td>\n",
-       "      <td>0.416202</td>\n",
+       "      <td>132352</td>\n",
+       "      <td>471</td>\n",
+       "      <td>114566</td>\n",
+       "      <td>17315</td>\n",
+       "      <td>0.355869</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>A60-A79</th>\n",
-       "      <td>41213</td>\n",
-       "      <td>3036</td>\n",
-       "      <td>36159</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>7.366608</td>\n",
+       "      <td>48819</td>\n",
+       "      <td>3135</td>\n",
+       "      <td>40072</td>\n",
+       "      <td>5612</td>\n",
+       "      <td>6.421680</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>A80+</th>\n",
-       "      <td>22841</td>\n",
-       "      <td>5892</td>\n",
-       "      <td>16313</td>\n",
-       "      <td>636</td>\n",
-       "      <td>25.795718</td>\n",
+       "      <td>25283</td>\n",
+       "      <td>6082</td>\n",
+       "      <td>17289</td>\n",
+       "      <td>1912</td>\n",
+       "      <td>24.055690</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>unbekannt</th>\n",
-       "      <td>182</td>\n",
+       "      <td>461</td>\n",
        "      <td>0</td>\n",
-       "      <td>120</td>\n",
-       "      <td>62</td>\n",
+       "      <td>171</td>\n",
+       "      <td>290</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -686,15 +678,15 @@
        "</div>"
       ],
       "text/plain": [
-       "               cases  deaths  recovered  sick  deathrate %\n",
-       "Altersgruppe                                              \n",
-       "A00-A04         4878       1       4337   540     0.020500\n",
-       "A05-A14        12838       0      11223  1615     0.000000\n",
-       "A15-A34        84566      19      75564  8983     0.022468\n",
-       "A35-A59       107640     448     100011  7181     0.416202\n",
-       "A60-A79        41213    3036      36159  2018     7.366608\n",
-       "A80+           22841    5892      16313   636    25.795718\n",
-       "unbekannt        182       0        120    62     0.000000"
+       "               cases  deaths  recovered   sick  deathrate %\n",
+       "Altersgruppe                                               \n",
+       "A00-A04         6272       1       5294    977     0.015944\n",
+       "A05-A14        17422       0      14249   3173     0.000000\n",
+       "A15-A34       110614      21      92931  17662     0.018985\n",
+       "A35-A59       132352     471     114566  17315     0.355869\n",
+       "A60-A79        48819    3135      40072   5612     6.421680\n",
+       "A80+           25283    6082      17289   1912    24.055690\n",
+       "unbekannt        461       0        171    290     0.000000"
       ]
      },
      "execution_count": 13,
@@ -719,11 +711,11 @@
      "output_type": "stream",
      "text": [
       "overall\n",
-      "   - cases:     274158\n",
-      "   - deaths:    9396\n",
-      "   - recovered: 243727\n",
-      "   - sick:      21035\n",
-      "   - deathrate: 0.03427220799684853\n"
+      "   - cases:     341223\n",
+      "   - deaths:    9710\n",
+      "   - recovered: 284572\n",
+      "   - sick:      46941\n",
+      "   - deathrate: 0.02845646395465722\n"
      ]
     }
    ],
@@ -863,9 +855,9 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
-       "      <td>203</td>\n",
+       "      <td>202</td>\n",
        "      <td>10</td>\n",
-       "      <td>193</td>\n",
+       "      <td>192</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>20</th>\n",
@@ -907,7 +899,7 @@
        "      <th>26</th>\n",
        "      <td>91</td>\n",
        "      <td>2</td>\n",
-       "      <td>89</td>\n",
+       "      <td>88</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>27</th>\n",
@@ -935,21 +927,21 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>31</th>\n",
-       "      <td>100</td>\n",
+       "      <td>101</td>\n",
        "      <td>0</td>\n",
-       "      <td>100</td>\n",
+       "      <td>101</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>32</th>\n",
        "      <td>119</td>\n",
        "      <td>0</td>\n",
-       "      <td>118</td>\n",
+       "      <td>119</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>33</th>\n",
        "      <td>301</td>\n",
        "      <td>0</td>\n",
-       "      <td>301</td>\n",
+       "      <td>300</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>34</th>\n",
@@ -961,25 +953,49 @@
        "      <th>35</th>\n",
        "      <td>528</td>\n",
        "      <td>0</td>\n",
-       "      <td>439</td>\n",
+       "      <td>528</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>36</th>\n",
        "      <td>590</td>\n",
-       "      <td>0</td>\n",
-       "      <td>424</td>\n",
+       "      <td>1</td>\n",
+       "      <td>588</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>37</th>\n",
-       "      <td>582</td>\n",
-       "      <td>0</td>\n",
-       "      <td>248</td>\n",
+       "      <td>583</td>\n",
+       "      <td>1</td>\n",
+       "      <td>581</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>38</th>\n",
-       "      <td>826</td>\n",
+       "      <td>823</td>\n",
+       "      <td>1</td>\n",
+       "      <td>764</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>573</td>\n",
+       "      <td>3</td>\n",
+       "      <td>351</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40</th>\n",
+       "      <td>540</td>\n",
+       "      <td>1</td>\n",
+       "      <td>277</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41</th>\n",
+       "      <td>750</td>\n",
+       "      <td>2</td>\n",
+       "      <td>41</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42</th>\n",
+       "      <td>365</td>\n",
        "      <td>0</td>\n",
-       "      <td>22</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1001,26 +1017,30 @@
        "16      537      32        505\n",
        "17      357      18        339\n",
        "18      331      13        318\n",
-       "19      203      10        193\n",
+       "19      202      10        192\n",
        "20      184       2        182\n",
        "21       87       3         84\n",
        "22      152       2        150\n",
        "23       54       1         53\n",
        "24       59       1         58\n",
        "25       77       0         77\n",
-       "26       91       2         89\n",
+       "26       91       2         88\n",
        "27      133       1        132\n",
        "28      114       0        114\n",
        "29      118       0        118\n",
        "30       89       1         88\n",
-       "31      100       0        100\n",
-       "32      119       0        118\n",
-       "33      301       0        301\n",
+       "31      101       0        101\n",
+       "32      119       0        119\n",
+       "33      301       0        300\n",
        "34      462       0        462\n",
-       "35      528       0        439\n",
-       "36      590       0        424\n",
-       "37      582       0        248\n",
-       "38      826       0         22"
+       "35      528       0        528\n",
+       "36      590       1        588\n",
+       "37      583       1        581\n",
+       "38      823       1        764\n",
+       "39      573       3        351\n",
+       "40      540       1        277\n",
+       "41      750       2         41\n",
+       "42      365       0          0"
       ]
      },
      "execution_count": 15,
@@ -1053,15 +1073,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING:root:Ignoring file /home/woefe/download/covid19stats-autodata/data/silo/2020-04-06.csv\n",
-      "WARNING:root:Ignoring file /home/woefe/download/covid19stats-autodata/data/silo/2020-03-30.csv\n",
-      "WARNING:root:Ignoring file /home/woefe/download/covid19stats-autodata/data/silo/2020-04-07.csv\n",
-      "WARNING:root:Ignoring file /home/woefe/download/covid19stats-autodata/data/silo/2020-03-31.csv\n",
-      "WARNING:root:Ignoring file /home/woefe/download/covid19stats-autodata/data/silo/2020-04-01.csv\n",
-      "WARNING:root:Ignoring file /home/woefe/download/covid19stats-autodata/data/silo/2020-04-02.csv\n",
-      "WARNING:root:Ignoring file /home/woefe/download/covid19stats-autodata/data/silo/2020-04-03.csv\n",
-      "WARNING:root:Ignoring file /home/woefe/download/covid19stats-autodata/data/silo/2020-04-04.csv\n",
-      "WARNING:root:Ignoring file /home/woefe/download/covid19stats-autodata/data/silo/2020-04-05.csv\n"
+      "WARNING:root:Ignoring file /tmp/tmp.8rmuidkRhL/covid19/data/silo/2020-04-06.csv\n",
+      "WARNING:root:Ignoring file /tmp/tmp.8rmuidkRhL/covid19/data/silo/2020-03-30.csv\n",
+      "WARNING:root:Ignoring file /tmp/tmp.8rmuidkRhL/covid19/data/silo/2020-04-07.csv\n",
+      "WARNING:root:Ignoring file /tmp/tmp.8rmuidkRhL/covid19/data/silo/2020-03-31.csv\n",
+      "WARNING:root:Ignoring file /tmp/tmp.8rmuidkRhL/covid19/data/silo/2020-04-01.csv\n",
+      "WARNING:root:Ignoring file /tmp/tmp.8rmuidkRhL/covid19/data/silo/2020-04-02.csv\n",
+      "WARNING:root:Ignoring file /tmp/tmp.8rmuidkRhL/covid19/data/silo/2020-04-03.csv\n",
+      "WARNING:root:Ignoring file /tmp/tmp.8rmuidkRhL/covid19/data/silo/2020-04-04.csv\n",
+      "WARNING:root:Ignoring file /tmp/tmp.8rmuidkRhL/covid19/data/silo/2020-04-05.csv\n"
      ]
     }
    ],
@@ -1073,7 +1093,7 @@
     "from multiprocessing import Pool\n",
     "from typing import Tuple\n",
     "\n",
-    "SILO_DIR = Path.home() / \"download/covid19stats-autodata/data/silo\"\n",
+    "SILO_DIR = Path(\"/tmp/tmp.8rmuidkRhL/covid19/data/silo\")\n",
     "\n",
     "def get_active_cases(date: datetime.date) -> Tuple[datetime.date,int]:\n",
     "    date_str = date.isoformat()\n",
@@ -1110,7 +1130,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d79649161a5149cbba57d1d7f41e4f34",
+       "model_id": "63834adb58be49a8abb72d1594cd259c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1155,7 +1175,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
