Change to extracted data

--- a/condensed.ipynb
+++ b/condensed.ipynb
@@ -53,7 +53,7 @@
     "    prep = np.vectorize(preparation)\n",
     "    return pd.Series(prep(df[col].to_numpy(), df[refcol].to_numpy()))\n",
     "    \n",
-    "def get_cases(date: datetime.date, url_prefix=\"https://raw.githubusercontent.com/woefe/covid19stats/autodata/data/silo\") -> pd.DataFrame:\n",
+    "def get_cases(date: datetime.date, url_prefix=\"/tmp/covid19stats-autodata/data/silo\") -> pd.DataFrame:\n",
     "    date_str = date.isoformat()\n",
     "    rki_cases = pd.read_csv(f\"{url_prefix}/{date_str}.csv\")\n",
     "    rki_cases[\"Datenstand\"] = pd.to_datetime(rki_cases[\"Datenstand\"], format=\"%d.%m.%Y, %H:%M Uhr\")\n",
@@ -459,7 +459,7 @@
     "from multiprocessing import Pool\n",
     "from typing import Tuple\n",
     "\n",
-    "SILO_DIR = Path(\"/tmp/data/silo\")\n",
+    "SILO_DIR = Path(\"/tmp/covid19stats-autodata/data/silo\")\n",
     "\n",
     "def get_active_cases(date: datetime.date) -> Tuple[datetime.date,int]:\n",
     "    date_str = date.isoformat()\n",
