Refactor SILO_DIR

--- a/condensed.ipynb
+++ b/condensed.ipynb
@@ -37,6 +37,7 @@
     "\n",
     "figsize=(25,17)\n",
     "pd.options.display.max_rows = 1000\n",
+    "SILO_DIR = Path(\"./autodata/data/silo\")\n",
     "\n",
     "def prepare(col: str, refcol: str, df: pd.DataFrame) -> pd.Series:\n",
     "    \"\"\"Generate a series that can be use with the standar sum() function\n",
@@ -53,7 +54,7 @@
     "    prep = np.vectorize(preparation)\n",
     "    return pd.Series(prep(df[col].to_numpy(), df[refcol].to_numpy()))\n",
     "    \n",
-    "def get_cases(date: datetime.date, url_prefix=\"/tmp/covid19stats-autodata/data/silo\") -> pd.DataFrame:\n",
+    "def get_cases(date: datetime.date, url_prefix) -> pd.DataFrame:\n",
     "    date_str = date.isoformat()\n",
     "    rki_cases = pd.read_csv(f\"{url_prefix}/{date_str}.csv\")\n",
     "    rki_cases[\"Datenstand\"] = pd.to_datetime(rki_cases[\"Datenstand\"], format=\"%d.%m.%Y, %H:%M Uhr\")\n",
@@ -65,7 +66,7 @@
     "    return rki_cases\n",
     "\n",
     "# Main data source\n",
-    "rki_cases = get_cases(datetime.date.today())\n",
+    "rki_cases = get_cases(datetime.date.today(), url_prefix=str(SILO_DIR))\n",
     "\n",
     "# Per district data\n",
     "rki_lkr = pd.read_csv(\"data/RKI_Corona_Landkreise.csv\")"
@@ -298,8 +299,6 @@
     "from pathlib import Path\n",
     "from multiprocessing import Pool\n",
     "from typing import Tuple\n",
-    "\n",
-    "SILO_DIR = Path(\"./autodata/data/silo\")\n",
     "\n",
     "def get_active_cases(date: datetime.date) -> Tuple[datetime.date,int]:\n",
     "    date_str = date.isoformat()\n",
