Make matplotlib plots SVG

--- a/condensed.ipynb
+++ b/condensed.ipynb
@@ -11,9 +11,9 @@
     ]
    },
    "source": [
-    "# COVID 19 Stats \n",
+    "# RKI COVID-19 Stats \n",
     "\n",
-    "Data provided by Robert Koch Institut and processed by [NPGEO](https://npgeo-corona-npgeo-de.hub.arcgis.com/datasets/dd4580c810204019a7b8eb3e0b329dd6_0).\n",
+    "Data provided by Robert Koch Institut (RKI) and processed by [NPGEO](https://npgeo-corona-npgeo-de.hub.arcgis.com/datasets/dd4580c810204019a7b8eb3e0b329dd6_0).\n",
     "Data License: Robert Koch-Institut (RKI), [dl-de/by-2-0](https://www.govdata.de/dl-de/by-2-0)."
    ]
   },
@@ -36,7 +36,11 @@
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.dates as mdates\n",
     "\n",
-    "figsize=(25,17)\n",
+    "from IPython.display import set_matplotlib_formats\n",
+    "%matplotlib inline\n",
+    "set_matplotlib_formats('svg')\n",
+    "\n",
+    "figsize=(20,13)\n",
     "pd.options.display.max_rows = 1000\n",
     "SILO_DIR = Path(\"./autodata/data/silo\")\n",
     "\n",
@@ -409,7 +413,8 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.6"
-  }
+  },
+  "title": "RKI COVID-19 Stats"
  },
  "nbformat": 4,
  "nbformat_minor": 4
