Fix data location, add GitHub link

--- a/condensed.ipynb
+++ b/condensed.ipynb
@@ -14,7 +14,9 @@
     "# RKI COVID-19 Stats \n",
     "\n",
     "Data provided by Robert Koch Institut (RKI) and processed by [NPGEO](https://npgeo-corona-npgeo-de.hub.arcgis.com/datasets/dd4580c810204019a7b8eb3e0b329dd6_0).\n",
-    "Data License: Robert Koch-Institut (RKI), [dl-de/by-2-0](https://www.govdata.de/dl-de/by-2-0)."
+    "Data License: Robert Koch-Institut (RKI), [dl-de/by-2-0](https://www.govdata.de/dl-de/by-2-0).\n",
+    "\n",
+    "Source code to generate this website is available on [GitHub](https://github.com/woefe/covid19stats)."
    ]
   },
   {
@@ -42,7 +44,7 @@
     "\n",
     "figsize=(20,13)\n",
     "pd.options.display.max_rows = 1000\n",
-    "SILO_DIR = Path(\"./autodata/data/silo\")\n",
+    "SILO_DIR = Path(\"./autodata/covid19stats-autodata/data/silo\")\n",
     "\n",
     "def prepare(col: str, refcol: str, df: pd.DataFrame) -> pd.Series:\n",
     "    \"\"\"Generate a series that can be use with the standar sum() function\n",
