Change date format and fix active cases plot

--- a/condensed.ipynb
+++ b/condensed.ipynb
@@ -92,7 +92,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(datetime.datetime.now().strftime(\"%c\"))"
+    "print(datetime.datetime.now(datetime.timezone.utc).strftime(\"%A %B %d %H:%M, %Z\"))"
    ]
   },
   {
@@ -322,7 +322,7 @@
     "cal = calendar.Calendar()\n",
     "dates = (\n",
     "    date \n",
-    "    for month in range(4,11)\n",
+    "    for month in range(4,13)\n",
     "    for date in cal.itermonthdates(2020, month)\n",
     "    if date <= datetime.date.today()\n",
     ")\n",
