Change tile, round table data

--- a/condensed.ipynb
+++ b/condensed.ipynb
@@ -11,12 +11,11 @@
     ]
    },
    "source": [
-    "# RKI COVID-19 Stats \n",
+    "# German COVID-19 Stats \n",
     "\n",
-    "Data provided by Robert Koch Institut (RKI) and processed by [NPGEO](https://npgeo-corona-npgeo-de.hub.arcgis.com/datasets/dd4580c810204019a7b8eb3e0b329dd6_0).\n",
-    "Data License: Robert Koch-Institut (RKI), [dl-de/by-2-0](https://www.govdata.de/dl-de/by-2-0).\n",
+    "Data provided by the *Robert Koch Institut* and the *Bundesamt für Kartographie und Geodäsie* at [arcgis.com](https://npgeo-corona-npgeo-de.hub.arcgis.com/datasets/dd4580c810204019a7b8eb3e0b329dd6_0). Data License: Robert Koch-Institut, [dl-de/by-2-0](https://www.govdata.de/dl-de/by-2-0).\n",
     "\n",
-    "Source code to generate this website is available on [GitHub](https://github.com/woefe/covid19stats)."
+    "The source code to generate this website is available on [GitHub](https://github.com/woefe/covid19stats)."
    ]
   },
   {
@@ -321,10 +320,11 @@
     "\n",
     "cal = calendar.Calendar()\n",
     "dates = (\n",
-    "    date \n",
-    "    for month in range(4,13)\n",
-    "    for date in cal.itermonthdates(2020, month)\n",
-    "    if date <= datetime.date.today()\n",
+    "    date\n",
+    "    for year in [2020, 2021]\n",
+    "    for month in range(1, 13)\n",
+    "    for date in cal.itermonthdates(year, month)\n",
+    "    if date <= datetime.date.today() and date >= datetime.date(2020, 4, 1)\n",
     ")\n",
     "\n",
     "with Pool(len(os.sched_getaffinity(0))) as pool:\n",
@@ -385,16 +385,15 @@
     "lkr = rki_lkr[[\"county\", \"EWZ\", \"KFL\"]]\n",
     "sum_lkr = rki_cases[rki_cases.Meldedatum >= start_at].groupby(\"Landkreis\").sum()[[\"cases\", \"deaths\", \"recovered\"]]\n",
     "counties = pd.merge(lkr, sum_lkr, right_on=\"Landkreis\", left_on=\"county\")\n",
-    "counties[\"cases/100000 inhabitants\"] = (counties[\"cases\"]/counties[\"EWZ\"])*100000\n",
-    "counties[\"cases/km²\"] = counties[\"cases\"]/counties[\"KFL\"]\n",
-    "counties[\"cases/inhabitants\"] = counties[\"cases\"]/counties[\"EWZ\"]\n",
-    "counties[\"deaths/km²\"] = counties[\"deaths\"]/counties[\"KFL\"]\n",
-    "counties[\"deaths/inhabitants\"] = counties[\"deaths\"]/counties[\"EWZ\"]\n",
+    "counties[\"cases/100k inhabitants\"] = (counties[\"cases\"] / counties[\"EWZ\"]) * 100000\n",
+    "counties[\"cases/km²\"] = counties[\"cases\"] / counties[\"KFL\"]\n",
+    "counties[\"deaths/km²\"] = counties[\"deaths\"] / counties[\"KFL\"]\n",
+    "counties[\"deaths/100k inhabitants\"] = (counties[\"deaths\"] / counties[\"EWZ\"]) * 100000\n",
     "counties[\"inhabitants\"] = counties[\"EWZ\"]\n",
     "counties.drop([\"EWZ\", \"KFL\"], axis=\"columns\", inplace=True)\n",
-    "counties.sort_values(by=\"cases/100000 inhabitants\", ascending=False)\n",
-    "\n",
-    "## Cases, recovered, deaths (all of Germany)"
+    "counties.set_index(\"county\", drop=True, verify_integrity=True, inplace=True)\n",
+    "counties.sort_values(by=\"cases/100k inhabitants\", ascending=False, inplace=True)\n",
+    "counties.round(2)"
    ]
   }
  ],
@@ -416,7 +415,7 @@
    "pygments_lexer": "ipython3",
    "version": "3.8.6"
   },
-  "title": "RKI COVID-19 Stats"
+  "title": "German COVID-19 Stats"
  },
  "nbformat": 4,
  "nbformat_minor": 4
