Make all plots use the same date range

--- a/condensed.ipynb
+++ b/condensed.ipynb
@@ -29,6 +29,7 @@
    "outputs": [],
    "source": [
     "import datetime\n",
+    "import calendar\n",
     "from pathlib import Path\n",
     "\n",
     "import pandas as pd\n",
@@ -44,6 +45,16 @@
     "figsize=(20,13)\n",
     "pd.options.display.max_rows = 1000\n",
     "SILO_DIR = Path(\"./autodata/covid19stats-autodata/data/silo\")\n",
+    "\n",
+    "cal = calendar.Calendar()\n",
+    "BEGIN_TRACKING = pd.to_datetime(datetime.date(2020,2,20))\n",
+    "TRACKED_DAYS = [\n",
+    "    pd.to_datetime(date)\n",
+    "    for year in [2020, 2021]\n",
+    "    for month in range(1, 13)\n",
+    "    for date in cal.itermonthdates(year, month)\n",
+    "    if date <= datetime.date.today() and date >= BEGIN_TRACKING\n",
+    "]\n",
     "\n",
     "def prepare(col: str, refcol: str, df: pd.DataFrame) -> pd.Series:\n",
     "    \"\"\"Generate a series that can be use with the standar sum() function\n",
@@ -172,7 +183,8 @@
     "per_day.sort_values(datecol, inplace=True)\n",
     "per_day[\"cum_cases\"] = per_day[\"cases\"].cumsum()\n",
     "per_day[\"cum_deaths\"] = per_day[\"deaths\"].cumsum()\n",
-    "per_day[\"cum_recovered\"] = per_day[\"recovered\"].cumsum()"
+    "per_day[\"cum_recovered\"] = per_day[\"recovered\"].cumsum()\n",
+    "per_day = per_day[per_day.index >= BEGIN_TRACKING]"
    ]
   },
   {
@@ -239,10 +251,10 @@
     "    df[datecol] = rki_cases[datecol].dt.floor(\"D\")\n",
     "    df = df.groupby(datecol).sum()\n",
     "    df.sort_values(datecol, inplace=True)\n",
-    "    return df\n",
+    "    return df[df.index >= BEGIN_TRACKING]\n",
     "\n",
     "\n",
-    "by_state = pd.DataFrame(index=rki_cases.groupby(datecol).first().index)\n",
+    "by_state = pd.DataFrame(index=pd.Index(TRACKED_DAYS))\n",
     "for state in states:\n",
     "    by_state[state] = plot_data(state).cases\n",
     "by_state = by_state.fillna(0) "
@@ -299,14 +311,13 @@
    },
    "outputs": [],
    "source": [
-    "import calendar\n",
     "import os\n",
     "import logging\n",
     "from multiprocessing import Pool\n",
     "from typing import Tuple\n",
     "\n",
-    "def get_active_cases(date: datetime.date) -> Tuple[datetime.date,int]:\n",
-    "    date_str = date.isoformat()\n",
+    "def get_active_cases(date: datetime.datetime) -> Tuple[datetime.date,int]:\n",
+    "    date_str = date.strftime(\"%Y-%m-%d\")\n",
     "    try:\n",
     "        data_file = SILO_DIR / f\"{date_str}.csv\"\n",
     "        rki_cases = pd.read_csv(data_file)\n",
@@ -318,17 +329,8 @@
     "    recovered = prepare(\"AnzahlGenesen\", \"NeuGenesen\", rki_cases).sum()\n",
     "    return date, cases - deaths - recovered\n",
     "\n",
-    "cal = calendar.Calendar()\n",
-    "dates = (\n",
-    "    date\n",
-    "    for year in [2020, 2021]\n",
-    "    for month in range(1, 13)\n",
-    "    for date in cal.itermonthdates(year, month)\n",
-    "    if date <= datetime.date.today() and date >= datetime.date(2020, 4, 1)\n",
-    ")\n",
-    "\n",
     "with Pool(len(os.sched_getaffinity(0))) as pool:\n",
-    "    cases_per_day = pool.map(get_active_cases, dates)"
+    "    cases_per_day = pool.map(get_active_cases, TRACKED_DAYS)"
    ]
   },
   {
